# clipaste

./: Cargo.toml  README.md  install.ps1
.github/workflows/: release.yml
src/: common.rs  macos.rs  main.rs  ssh_setup.rs  windows.rs
