[package]
name = "clipaste"
version = "2.4.0"
edition = "2021"
description = "Fix macOS/Windows screenshot paste in terminal AI tools"
license = "MIT"
repository = "https://github.com/hqhq1025/clipaste"

[dependencies]
image = { version = "0.25", default-features = false, features = ["tiff", "png", "bmp"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSArray",
    "NSString",
    "NSURL",
    "NSData",
    "NSObject",
    "NSEnumerator",
    "NSRange",
    "NSRunLoop",
    "NSTimer",
    "NSDate",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSPasteboard",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
] }

[profile.release]
opt-level = "s"
lto = true
strip = true
